Aligned section2 and section 3. Corrected section1 header

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+body{
+    display: flex;
+    flex-direction: column;
+}
 .header{
     background-color: #1F2937;
     color: #f9faf8;
-    display: flex;
-    flex-direction: column;
+    
     padding-left: 150px;
     padding-right: 150px;
 }
@@ -13,9 +16,9 @@ header{
 }
 .logo{
     font-size: 24px;
-    display: flex;
-    justify-content: end;
+    
     margin-top: 10px;
+    font-weight: bolder;
 }
 ul{
     display: flex;
@@ -28,7 +31,7 @@ ul{
 
 .heading{
     font-size: 48px;
-    font-weight: extra bold;
+    font-weight: bold;
 }
 
 .content{
@@ -47,29 +50,60 @@ button{
     flex-direction: column;
 }
 .header-image{
+    
     display: flex;
-    max-width: 100px;
-    height: 200px;
     padding-left: 15px;
     padding-right: 200px;
     padding-bottom: 50px;
+    height: 300px;
+    
 }
 .heading-section{
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    padding-bottom: 50px;
 }
 
 .section1-image-content{
-    width: 100px;
-    height: 100px;
+    
+    width: 150px;
+    height: auto;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    padding-left: 25px;
+    
 }
 
 .section1-images{
     display: flex;
     justify-content: space-evenly;
-    gap: 20px;
+    margin-left: 150px;
+    margin-right: 150px;
+    color: #1F2937;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.section-header{
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: bolder;
+    text-align: center;
+    padding: 20px;
+}
+div > img{
+    border:2px solid #3882f6;
+    border-radius: 5%;
+}
+
+.section2{
+    display: flex;
+    flex-direction: column;
+    background-color: #e5e7eb;
+    padding: 70px 150px;
+    font-size: 36px;
+    color: #1F2937;
+    font-style:  italic;
+}
+.author{
+    text-align: end;
 }
